# tnode-experiments

./: .env.example  .gitignore  Cargo.toml  LICENSE  P2P_IMPLEMENTATION.md  README.md  tnode.yml
.claude/: CLAUDE.md
crates/p2p-lab/: Cargo.toml  README.md
crates/p2p-lab/src/: main.rs
crates/p2p-protocol/: Cargo.toml  README.md
crates/p2p-protocol/src/: client.rs  config.rs  error.rs  lib.rs  peer.rs
crates/teranode-client/: Cargo.toml  build.rs
crates/teranode-client/proto/: README.md  blockchain_api.proto
crates/teranode-client/src/: lib.rs
crates/tnode-lab/: Cargo.toml
crates/tnode-lab/src/: config.rs  main.rs
