[workspace]
resolver = "2"
members = [
    "crates/teranode-client",
    "crates/tnode-lab",
    "crates/p2p-protocol",
    "crates/p2p-lab",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/tnode-experiments"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
hex = "0.4"
dotenvy = "0.15"

# Bitcoin
bitcoinsv = "0.4.1"

# libp2p
libp2p = { version = "0.54", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "kad", "identify", "dns", "mdns", "macros", "serde"] }
libp2p-identity = { version = "0.2", features = ["ed25519"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
async-trait = "0.1"
ed25519-dalek = "2.1"

[workspace.dependencies.teranode-client]
path = "crates/teranode-client"

[workspace.dependencies.p2p-protocol]
path = "crates/p2p-protocol"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
