[package]
name = "teranode-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tracing-subscriber.workspace = true
